# prol16-tools

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  as  cdis  dis  initBuild.sh  vm  vvm
.github/workflows/: main.yml
old_prol16_asm/: assembler.rb  code.rb  label.rb  lexer.rb  macro.rb  parser.rb  vhdlfilewriter.rb
programs/: gcd.ass  multiplication.ass  multiplication.hex  regression_test.ass  regression_test.hex
prol16-as/: .gitignore  CMakeLists.txt
prol16-as/cmake/: antlr4-generator-config.cmake  antlr4-runtime-config.cmake  antlr4-targets-release.cmake  antlr4-targets.cmake
prol16-as/src/main/: CMakeLists.txt
prol16-as/src/main/cpp/: CommandCounter.cpp  CommandCounter.h  ContextUtils.cpp  ContextUtils.h  CountingErrorListener.h  InstructionWriter.cpp  InstructionWriter.h  LabelListener.cpp  LabelListener.h  Prol16AsmListener.cpp  Prol16AsmListener.h  main.cpp
prol16-as/src/main/grammar/: Prol16AsmLexer.g4  Prol16AsmParser.g4
prol16-as/src/test/: CMakeLists.txt
prol16-as/src/test/cpp/: CommandCounterTest.cpp  InstructionWriterTest.cpp
prol16-as/src/test/resources/: all_instructions.s  labels.s  printing.s  symbolic_constant.s
prol16-dis/: CMakeLists.txt
prol16-dis/src/main/: CMakeLists.txt
prol16-dis/src/main/cpp/: CLIArguments.cpp  CLIArguments.h  Disassembler.cpp  Disassembler.h  main.cpp
prol16-dis/src/test/: CMakeLists.txt
prol16-dis/src/test/cpp/: CLIArgumentsTest.cpp  DisassemblerTest.cpp
prol16-dis/src/test/resources/: empty_code_segment.p16  incomplete_instruction.p16  invalid_instruction.p16  missing_entry_point.p16  missing_immediate.p16  multiple_instructions.p16  single_instruction.p16
prol16-shared/: CMakeLists.txt
prol16-shared/src/main/: CMakeLists.txt
prol16-shared/src/main/cpp/: AddressUtils.h  ArgumentParser.cpp  ArgumentParser.h  ArithmeticResult.cpp  ArithmeticResult.h  CLIArgumentNames.cpp  CLIArgumentNames.h  CLIArguments.cpp  CLIArguments.h  CLIArgumentsBuilder.cpp  CLIArgumentsBuilder.h  CLIError.h  CLIFlags.h  CodeSegment.cpp  CodeSegment.h  CommandInterpreter.cpp  CommandInterpreter.h  EOFError.h  FileUtils.cpp  FileUtils.h  Filename.cpp  Filename.h  Flavor.cpp  Flavor.h  IncompleteInstructionError.cpp  IncompleteInstructionError.h  Instruction.cpp  Instruction.h  InstructionDecodeError.cpp  InstructionDecodeError.h  InstructionWriter.cpp  InstructionWriter.h  IntegerUtils.cpp  IntegerUtils.h  LabelUtils.h  Logger.cpp  Logger.h  MathUtils.h  MemoryUtils.cpp  MemoryUtils.h  (+30 more)
prol16-shared/src/test/: CMakeLists.txt
prol16-shared/src/test/cpp/: ArgumentParserTest.cpp  ArithmeticResultTest.cpp  CLIArgumentNamesTest.cpp  FileUtilsTest.cpp  FilenameTest.cpp  InstructionTest.cpp  InstructionWriterTest.cpp  IntegerUtilsTest.cpp  MathUtilsTest.cpp  MemoryUtilsTest.cpp  MnemonicUtilsTest.cpp  NumberUtilsTest.cpp  PrintUtilsTest.cpp  RegisterUtilsTest.cpp  RuntimeLibraryTest.cpp  StreamUtilsTest.cpp  StringUtilsTest.cpp
prol16-shared/src/test/resources/: binary
prol16-vm/: CMakeLists.txt
prol16-vm/src/main/: CMakeLists.txt
prol16-vm/src/main/cpp/: AddressRange.cpp  AddressRange.h  Flag.cpp  Flag.h  FlagError.h  GoRuntime.cpp  GoRuntime.h  GoRuntimeError.cpp  GoRuntimeError.h  IVirtualDevice.h  Prol16.cpp  Prol16.h  RegisterFile.cpp  RegisterFile.h  VirtualHmiDevice.cpp  VirtualHmiDevice.h  VirtualMachine.cpp  VirtualMachine.h  VirtualMemory.cpp  VirtualMemory.h  main.cpp
prol16-vm/src/test/: CMakeLists.txt
prol16-vm/src/test/cpp/: FlagTest.cpp  RegisterFileTest.cpp  VirtualMemoryTest.cpp
prol16-vm/src/test/resources/: multiple_instructions.p16
